--- a/app/UserCard/UserCard.module.css
+++ b/app/UserCard/UserCard.module.css
@@ -1,13 +1,47 @@
-.demo {
-    background-color: var(--mantine-color-blue-filled);
-    color: var(--mantine-color-white);
-    padding: var(--mantine-spacing-md);
-    text-align: center;
-    margin-top: "10px";
-    display: "flex";
-    align-items: "center";
-  
-    @media (min-width: em(750px)) {
-      background-color: var(--mantine-color-red-filled);
-    }
-  }                                                 
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.avatar {
+  border-radius: 50%;
+  width: 50%;
+  height: 50%;
+  margin-right: 20px;
+  margin-bottom: 10px;
+}
+
+@media screen and (max-width: 767px) {
+  .avatar {
+    width: 30%;
+    height: 30%;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .avatar {
+    width: 30%;
+    height: 30%;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .avatar {
+    width: 50%;
+  }
+}
+
+
+.buttonsContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+@media (max-width: 768px) {
+  .buttonsContainer {
+    flex-direction: row;
+    align-items: center;
+  }
+}
