--- a/app/UserCard/UserCard.module.css
+++ b/app/UserCard/UserCard.module.css
@@ -8,14 +8,17 @@
   border-radius: 50%;
   width: 50%;
   height: 50%;
-  margin-right: 20px;
   margin-bottom: 10px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 @media screen and (max-width: 767px) {
   .avatar {
     width: 30%;
     height: 30%;
+    margin-left: 50px;
+    margin-right: 50px;
   }
 }
 
